force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Lead 점수 0~100 (LeadScoringService).</description>
    <label>Lead 점수</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>