force-app/main/default/objects/Lead/fields/RFQ_Spec_JSON__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Spec_JSON__c</fullName>
    <description>Prompt Builder SpecExtract 결과 JSON. FR-LEAD-002.</description>
    <label>RFQ 사양 JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>