force-app/main/default/objects/Lead/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <description>Lead 인입 채널. FR-LEAD-001 (3채널).</description>
    <label>인입 채널</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHONE</fullName>
                <label>전화</label>
            </value>
            <value>
                <fullName>EMAIL</fullName>
                <label>이메일</label>
            </value>
            <value>
                <fullName>VISIT</fullName>
                <label>방문</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>